--- a/content/post/2020-06-12-checkiing-up-on-american-funds-performance-through-cycle.Rmd
+++ b/content/post/2020-06-12-checkiing-up-on-american-funds-performance-through-cycle.Rmd
@@ -1,11 +1,10 @@
 ---
-title: Evaluating American Funds Over Three Market Cycles
+title: Evaluating AF Over Three Market Cycles
 author: David Lucey
 date: '2020-06-12'
 slug: checking-up-on-american-funds-performance-through-cycle
 categories: ["R", "Code-Oriented"]
 tags: ["data.table", "quantmod", "PerformanceAnalytics"]
-draft: true
 output:
   blogdown::html_page
 ---
@@ -15,6 +14,7 @@ output:
 packages <- 
   c("data.table", 
     "ggplot2",
+    "stringr",
     "quantmod",
     "PerformanceAnalytics")
 
@@ -39,32 +39,77 @@ setDefaults(getSymbols.av, api.key=keyring::key_get('alphavantage'))
 
 # Introduction
 
-Active funds have done poorly over the last ten years, and in most cases, haven't justified their fees. It all started with the Boggleheads, but a growing list of commentators appropriately advocate for index funds, sometimes go a little beyond what we believe to be fairly representing the facts. The inspiration for this article is this post by Asset Builder blog site [American Funds Says, “We Can Beat Index Funds”](https://assetbuilder.com/knowledge-center/articles/american-funds-says-we-can-beat-index-funds) scrutinizing claims by the fund group. The post claimed "Even without this commission, the S&P 500 beat the aggregate returns of these ("American") funds over the past 1-, 3-, 5-, 10- and 15-year periods". There is a supporting chart in the post showing a group of funds compared to the Vanguard Total Market index. This analysis struck us in conflict with our own experience as actual holders of a core portfolio of eight American Funds over the last 20 years.
+Active funds have done poorly over the last ten years, and in most cases, struggled to justify their fees. A growing list of commentators appropriately advocate for index funds, although sometimes go a little beyond what we believe to be fairly representing the facts. The inspiration for this article is this post by Asset Builder blog site [American Funds Says, “We Can Beat Index Funds”](https://assetbuilder.com/knowledge-center/articles/american-funds-says-we-can-beat-index-funds) scrutinizing claims by the fund group. Asset Builder asserts that "Even without this commission, the S&P 500 beat the aggregate returns of these ("American") funds over the past 1-, 3-, 5-, 10- and 15-year periods". In the post, there is a supporting chart showing a group of American Funds ("AF") funds compared to the Vanguard Total Market ("TMI"_ index. This analysis struck us in conflict with our own experience as actual holders of a core portfolio of eight AF over the last 20 years, so this post will be about exploring this data.
 
-As usual, Redwall would like to avoid defending to any particular viewpoint other than to follow the data and see where it leads. If we have made any mistakes in our assumptions or the data used, we welcome polite commentary to set us straight. We have no relationship with the American Funds, and for the most part are sympathetic to those who say that index funds may be the best choice for most investors. All the code is available on Github for anybody to replicate. Also to be clear, Redwall is not an investment adviser and is making no investment recommendations.
-
-
-# Set Up of American Funds Portfolio 
-
-During the 2000 bear market, Redwall put substantial research into its investment strategy, and concluded that at the time, the American Funds had a competitive advantage over other mutual fund groups. Capital Group, the operator of the American Funds, was founded at the beginning of the Great Depression in 1932. Anyone working in the front office Wall Street knows Capital Group well, but few outside have probably ever heard of them. Capital had a large group of very experienced managers sitting in different locations around the world, with varied perspectives, owning a heavy component of their own funds, with each investing in concentrated portfolio of their own highest conviction ideas. Managers had strong incentive to think long-term instead of for the next quarter. If the style of one manager of the fund was out of sync with the current flavor of the market, others might pick up the pace. The cost of research could be leveraged over a much larger asset base than most mutual funds while still keeping running costs at a manageable level. Being one of the largest managers, analysts and managers would always have access to the best information and advice.
-
-Investments were made mostly in the 2001-2003 bear market period, with dollar-cost averaging across a group of funds designed to be diversified across regions and investment styles. The investments were made without paying loads, rightly mentioned in the Asset Builder article, as a potential drag on returns. In this article, we will download the weekly closing prices of the relevant American Funds and the most comparable Vanguard Funds, re-construct our portfolio and estimate the corresponding weighting of different asset classes for each, replicate a relevant benchmark portfolio of Vanguard index funds, and explore their relative performance histories over the period to try to square the two perspectives. We were constrained to choosing index funds with launch dates before 1997.
+As usual, Redwall would like to avoid defending to any particular viewpoint other than to follow the data and see where it leads. If we have made any mistakes in our assumptions or the data used, we welcome polite commentary to set us straight. We have no relationship with the AF, and for the most part are sympathetic to those who say that index funds may be the best choice for most investors. All the code is available on Github for anybody to replicate. Also to be clear, Redwall is not an investment adviser and is making no investment recommendations.
 
 
-# Description of American Funds Held
+# Set Up of AF Portfolio 
 
-The American Funds don't fit well into the traditional Morningstar investment categories. By in large, its portfolios are many times larger than other active funds, and mostly stick to the largest of the large capitalization global stocks. Washington Mutual mostly owns US mega caps value stocks and holds no cash, while Amcap often moves down the market capitalization spectrum a bit with growth stocks, and will hold a substantial amount of cash. Capital Income builder has a mix of US and overseas stocks which pay high dividends with room to grow. Income Fund of America is similar to Capital Income builder, but has a more US oriented mix and takes more credit risk. Capital World Growth and Income is like Washington Mutual in its stock selection, but will hold a small amount of credit at times when it makes more sense than the equity. New Perspective owns the largest multinational companies domiciled in the US and around the world, but have acquired the competency to expand across borders. 
+During the 2000 bear market, Redwall put substantial research into its investment strategy, and concluded that the AF had a competitive advantage over other mutual fund groups. Capital Group, the operator of the AF, was founded at the beginning of the Great Depression in 1932. Capital had a large group of experienced managers sitting in different locations around the world, with varied perspectives, owning a heavy component of their own funds, with each investing in concentrated portfolio of their own highest conviction ideas. Managers had strong incentive to think long-term instead of for the next quarter. If the style of one manager of the fund was out of sync with the current flavor of the market, others might pick up the pace. The cost of research could be leveraged over a much larger asset base than most mutual funds while still keeping running costs at a manageable level. Being one of the largest managers, analysts and managers would always have access to the best information and advice.
+
+Investments were made mostly in the 2001-2003 bear market period, with dollar-cost averaging across a group of funds designed to be diversified across regions and investment styles. The investments were made without paying loads, rightly mentioned in the Asset Builder article, as a drag on returns. In this article, we will download the weekly closing prices of the relevant AF and the most comparable Vanguard Funds, re-construct our portfolio and estimate the corresponding weighting of different asset classes for each, replicate a relevant benchmark portfolio of Vanguard index funds, and explore their relative performance histories over the period to try to square the two perspectives.
+
+
+# Description of AF Held
+
+The AF don't fit well into the traditional Morningstar investment categories. By in large, its portfolios are many times larger than other active funds, and mostly stick to the largest of the large capitalization global stocks. Washington Mutual mostly owns US mega caps value stocks and holds no cash, while Amcap often moves down the market capitalization spectrum a bit with growth stocks, and will hold a substantial amount of cash. Capital Income builder has a mix of US and overseas stocks which pay high dividends with room to grow. Income Fund of America is similar to Capital Income builder, but has a more US oriented mix and takes more credit risk. Capital World Growth and Income is like Washington Mutual in its stock selection, but will hold a small amount of credit at times when it makes more sense than the equity. New Perspective owns the largest multinational companies domiciled in the US and around the world, but have acquired the competency to expand across borders. 
 
 # New Geography of Investing
 
-It was probably from operating New Perspective, set up to invest in companies having a majority of revenues of coming from outside of their country of domicile, which led American Funds to discover a new way of looking at its portfolios. In the [New Geography of Investing](https://www.capitalgroup.com/content/dam/cgc/tenants/canada/pdf/en/public/NewGeographyOfInvesting.pdf) campaign launched in 2016, they do an excellent job of explaining the concept that a portfolio shouldn't be constrained by company domicile, a central pillar of the Morningstar ratings platform. In addition to the country of domicile, American funds now disclose the aggregated geographic mix of revenues of all of its portfolios on their website, and explain clearly that it doesn't prioritize fitting its portfolios into Morningstar regional boxes at the expense of finding the best investments. 
+It was probably from operating New Perspective, set up to invest in companies having a majority of revenues of coming from outside of their country of domicile, which led AF to discover a new way of looking at its portfolios. In the [New Geography of Investing](https://www.capitalgroup.com/content/dam/cgc/tenants/canada/pdf/en/public/NewGeographyOfInvesting.pdf) campaign launched in 2016, they do an excellent job of explaining the concept that a portfolio shouldn't be constrained by company domicile, a central pillar of the Morningstar ratings platform. In addition to the country of domicile, AF now disclose the aggregated geographic mix of revenues of all of its portfolios on their website, and explain clearly that it doesn't prioritize fitting its portfolios into Morningstar regional boxes at the expense of finding the best investments. 
 
 
-# Geography of Vanguard Benchmark Portfolio
+# Doublecheck Asset Builder Values
 
-We believe that the flaw in Asset Builder's analysis was comparing the funds to the Vanguard Total Market Index fund (TMI), which has 100% US listed companies. US listed companies have risen by 3.4x over the last 10 years while overseas companies have only risen by 1.6x, as the slow and steady bull \$ bull market has eaten into the returns from holding overseas assets.
+We believe that Asset Builder were referring to no-load AF in their table, but were not sure. It has been possible to buy American Fund F-1 class shares without the loads since 2016 (with a 3 bps higher annual expense ratio), so there is no reason for anyone that doesn't want to pay the load to pay one. As shown below, we calculate that their ending value for is 3-4% too high for the Vanguard Fund, and also too low for 4 out of the 5 AF without loads. For the most part, their claim still holds up even with these adjustments at least with AF's US line-up. If taxes were taken into account, it would widen the advantageo TMI. Still, this is a strange pattern (erring in favor of TMI and against AF), and makes us a little suspicious of Asset Builder.
 
-As shown below, we are comparing our portfolio to 54.5% of the S&P index. The S&P has an average market capitalization almost twice as large as the Total Market Index, and we believe is more comparable to market capitalization of holdings of the American Funds. Given the size of the funds, we don't expect American Funds to own smaller companies. Although we believe the small-cap component is about 5%, we prefer to get the bulk of our small and mid-cap exposure though the Vanguard Extended Market Index fund (which invests in the other 3,000 US stocks or 25% of US market capitalization not in the S&P index). We are also including 24.5% of our benchmark in non-US stocks based on our weightings shown in the matrix below. 
+
+```{r}
+tickers <-c("AGTHX","AMCPX","AWSHX","AIVSX","AMRMX", "VTSAX")
+asset_builder_data <- lapply(tickers, function(fund) {
+  getSymbols(
+    fund,
+    src = "yahoo",
+    env = NULL,
+    from = as.Date("2004-11-30"),
+    to = as.Date("2019-11-30")
+  )
+})
+
+get_data <- function(xts_obj, load = 0) {
+  dt <- data.table(
+          date = index(xts_obj),
+          price = (Ad(xts_obj[, 6]))
+        )
+  dt[, month:=zoo::as.yearmon(date)]
+  dt <- dt[, .SD[1], month]
+  if (!str_detect(names(dt)[3], "price.A.*")) {
+    dt[, shares := 100 / .SD, .SDcols=3]
+  } else {
+    dt[, shares := (100 * (1 - load)) / .SD, .SDcols=3]
+  }
+  final_price <- as.numeric(dt[nrow(dt), 3])
+  dt[, final_value := shares * final_price]
+  return <- sum(dt$final_value)
+  return
+  }
+  
+asset_builder <- 
+  c(42402, 41827, 39981, 37125, 39814, 45112)
+dt <-data.table(
+        fund = tickers,
+        asset_builder,
+        redwall_no_load = round(sapply(asset_builder_data, get_data), 0),
+        redwall_load = round(sapply(asset_builder_data, get_data, load=0.0575), 0)
+      )
+dt
+
+```
+
+# Customized Vanguard Benchmark Portfolio
+
+There is nothing wrong with Asset Builder's choice of Vanguard Total Market Index (TMI) as a comp for the US funds, but our portfolio also includes several non-US and balanced funds. As shown below, we will be comparing our portfolio to 54.5% of the S&P index. The S&P has an average market capitalization almost twice as large as the Total Market Index, and we believe is more comparable to typical holdings of the AF. We are also including 24.5% of our benchmark in non-US stocks based on our estimated weightings shown in the matrix below. AF also run with a higher amount of cash than index funds, as can be seen with our estimated 7.35% weighting in VFISX below. Cash reserves are a drag on performance during bull markets, so has likely been holding AF back in recent years. During the 2000 tech crash, extra cash gave the AF a lot more room to maneuver, and as we show below, helped them achieve ~30% out-performance in the 2000 bear market. Our benchmark is more granular, and we believe a more fair comparison than used by Asset Builder, but in the end is still only an estimate. Weightings over time have not been static as we have assumed, and we have chosen one set of weightings for the entire 20-year period. A future analysis may look at ways of flexing our weightings matrix over time.
 
 
 ```{r 'benchmark-matrix', echo=TRUE, message=FALSE, warning=FALSE}
@@ -89,7 +134,7 @@ m <- matrix(
   ncol = 6, 
   byrow=TRUE)
 
-# Weighting of American Funds portfolio
+# Weighting of AF portfolio
 portfolio <- 
   c(0.15, 0.20, 0.15, 0.15, 0.05, 0.1, 0.1, 0.1)
 
@@ -100,20 +145,9 @@ benchmark
 ```
 
 
-# Cash Component of Benchmark Portfolio
-
-American funds also run with a higher amount of cash than index funds, as can be seen with our estimated 7.35% weighting in VFISX above. This has tended to be a drag on performance during bull markets, as we saw in the late 1990s and with the more recent bull market. Morningstar style box thinkers and industry consultants generally frown on high cash weightings, and it is valid concern in most cases though we are not sure if it should be for American Funds. During the 2000 tech crash, when American Funds had a lot more room to maneuver, and picked up an extra-ordinary amount of outperformance relative to most equity indices (as we will show below). It is worth noting that our benchmark is a lot more granular and we believe a more fair comparison than used the Asset Builder blog, but in the end is still only an estimate. Weightings over time have not been static as we have assumed, and we have chosen one set of weightings for the entire 20-year period. A future analysis may look at ways of flexing our weightings matrix over time.
-
-# Thoughts on Mutual Fund Investment Expenses
-
-We would also add another thought at odds with conventional thinking. Many mutual fund investors redeem their funds at the exact worst moments. Buying at the top and selling at the bottom can be seen over and over in retail and possibly institutional mutual fund flows at considerable cost to holders. This also forces managers to sell when they should be buying, in effect contributing to the poor performance of active managers. Many American Fund investors paid hefty loads representing a sunk cost, and on-going 12-b1 fees to provide incentive to their advisers to hold their hands during the inevitable scary moments. The negative aspects of fees and agency problems are often discussed, but measuring the cost of not selling at the wrong time is much more difficult.
-
-Coupled with extra cash buffer, American Fund may have greater flexibility to not sell or even to buy at challenging moments. This is in no way to advocate for the current fee structure, just that some of the DIY index only advice we hear from sites like Asset Builder may not fully take into account the actual behavior of real people who are not investment professionals. Some portion of those seemingly high investment costs may pay for themselves when done right. So far, we haven't seen much study on the contrafactual of how advised investors fare relative to DIY through a bear market.
-
-
 # Download Raw Weekly Mutual Fund Price Data with Quantmod
 
-In the course of writing this blog, Redwall has frequently expressed amazement that so many analyses, not possible previously, are now enabled almost so quickly by a few lines of code in open-source R or Python. Using the `quantmod` package, here we extract over 20 years of mutual fund data, 80,738 prices for our 14 funds in a matter of seconds, all for free. In addition to stock, mutual fund  and index prices, we could just as easily query economic series from FRED with `quantmod`. We noted that the CFA Society recently starting to make the Morningstar Ibbottson annual Stocks, Bonds, Bills and and Inflation data since 1926 available to members in an online spreadsheet. The `quantmod` package offers much more comprehensive and efficient access to data to all completely for free to all since 2007. There is no CFA Institute R or Python package, or indeed any open source participation. We can't help but feel that the CFA Institute may to be falling behind, and has a growing need to update itself to maintain relevance.
+In the course of writing this blog, Redwall has frequently expressed amazement that so many analyses, not possible previously, are now enabled almost so quickly by a few lines of code. Using the `quantmod` package, here we extract over 20 years of mutual fund data, 80,738 prices for our 14 funds in a matter of seconds, all for free. In addition to stock, mutual fund  and index prices, we could just as easily query economic series from FRED with `quantmod`. 
 
 
 ```{r 'quantmod-data', echo=TRUE, message=FALSE, warning=FALSE}
@@ -155,7 +189,7 @@ fund_returns_df <-
     fund_returns_list)
 names(fund_returns_df) <- funds
 
-# Calculate return on American Funds re-balanced quarterly with PerformanceAnalytics Return.Portfolio function
+# Calculate return on AF re-balanced quarterly with PerformanceAnalytics Return.Portfolio function
 portfolio_return <-
   Return.portfolio(fund_returns_df[, am_funds],
                    rebalance_on = 'quarters',
@@ -193,9 +227,9 @@ DrawdownPeak(test1)
 ```
 
 
-# American Funds Steadily Outperforming our Customized Benchmark 
+# AF Steadily Outperforming our Customized Benchmark 
 
-The chart below gives a much better "apples-to-apples" benchmark for comparison to our portfolio than the Vanguard Total Market Index. It is true that the mainly US-oriented American Funds that we may not have outperformed as much as the non-US heavy portfolios. But our portfolio is global, and as can be seen here in aggregate, outperforming steadily except for a few relatively short periods. We can see three periods of either under-performance or treading of water relative to the benchmarks at the tail end of the previous two bulls, but then the subsequent out-performance.
+The chart below gives a much better "apples-to-apples" benchmark for comparison to our portfolio than the Vanguard Total Market Index would have. It is true that the mainly US-oriented AF that we may not have outperformed as much as the non-US heavy portfolios. But our portfolio is global, and as can be seen here in aggregate, outperforming steadily except for a few relatively short periods. We can see three periods of either under-performance or treading of water relative to the benchmarks at the tail end of the previous two bulls, but then the subsequent out-performance.
 
 
 ```{r 'relative-performance-chart', echo=TRUE, message=FALSE, warning=FALSE}
@@ -203,9 +237,9 @@ chart.RelativePerformance(portfolio_return, benchmark_return)
 ```
 
 
-# Money Difference of American Funds vs Index Benchmarks
+# Money Difference of AF vs Index Benchmarks
 
-The annual active premium of the American Funds portfolio over the whole period has been about 1.8% per annum, but as we will discuss below, the fund group's premium may be compressing. If we choose the starting point to be the beginning of 2003, it falls to 1.02%. Over the full period as shown below in blue, a dollar invested in 1997 would be worth \$4.47 while the benchmark would yield \$3.03 for the benchmark in orange (a considerable reward for hiring American Funds even ignoring likely greater tax inefficiency). If we move to 2002 (around when we built our portfolio), the difference falls to \$3.16 and \$2.66. If history is anything to go by, American Funds has traditionally picked up most of its advantage during bear markets as we may be now, so it might be best to wait a couple of years to draw the conclusions made by Asset Builder.
+The annual active premium of the AF portfolio over the whole period has been about 1.8% per annum, but as we will discuss below, the fund group's premium may be compressing. If we choose the starting point to be the beginning of 2003, it falls to 1.02%. Over the full period as shown below in blue, a dollar invested in 1997 would be worth \$4.47 while the benchmark would yield \$3.03 for the benchmark in orange (a considerable reward for hiring AF even ignoring likely greater tax inefficiency). If we move to 2002 (around when we built our portfolio), the difference falls to \$3.16 and \$2.66.
 
 
 ```{r 'cumulative-return', echo=TRUE, message=FALSE, warning=FALSE}
@@ -220,7 +254,7 @@ chart.CumReturns(
 
 # Domestic Equity Funds Leaning Conservatively Throughout the Period
 
-We can see here that both of our mainly US funds managed to reduce their betas and R2 in the run-up and short period after the beginning of the 2000 bear market. Washington Mutual in particular made drastic reductions to exposure, while Amcap did to a lesser extent in 2007-2008. Sharpe ratios are very volatile, and standard deviations briefly reached 60% during 2009 and again this year. Both funds consistently had betas well below one over the entire period, but alpha hardly registers on the graph (This may be down to a scaling issue for us because we are new to this package). American Funds took a lot of heat for not owning many tech stocks in the run up to the 2000 bust, but the low volatility through that period show it navigating in that period with greater calm than the two subsequent bear markets.
+We can see here that both of our mainly US funds managed to reduce their betas and R2 in the run-up and short period after the beginning of the 2000 bear market. Washington Mutual in particular made drastic reductions to exposure, while Amcap did to a lesser extent in 2007-2008. Sharpe ratios are very volatile, and standard deviations briefly reached 60% during 2009 and again this year. Both funds consistently had betas well below one over the entire period, but alpha hardly registers on the graph (This may be down to a scaling issue for us because we are new to this package). AF took a lot of heat for not owning many tech stocks in the run up to the 2000 bust, but the low volatility through that period show it navigating in that period with greater calm than the two subsequent bear markets.
 
 
 ```{r 'domestic-equity-funds', echo=TRUE, message=FALSE, warning=FALSE}
@@ -287,11 +321,11 @@ It is easily possible to extract all periods to see how persistently or not a fu
 
 # Looking at Number of Weeks with Outperformance
 
-We took all of our 1196 weeks, and calculated the percentage of weeks by quarter where our American Funds portfolio outperformed the benchmark. We can see that the ratio of weeks outperforming greater than 0.5 in almost all periods, though it broke below briefly during 2007 and again last week. The confidence bars are wide, and so hard to conclude definitively that the ratio has been above 0.5 since 2006-7. After a while looking at this chart, the trend downward since 2005 certainly struck us. 
+We took all of our 1196 weeks, and calculated the percentage of weeks by quarter where our AF portfolio outperformed the benchmark. We can see that the ratio of weeks outperforming greater than 0.5 in almost all periods, though it broke below briefly during 2007 and again last week. The confidence bars are wide, and so hard to conclude definitively that the ratio has been above 0.5 since 2006-7. After a while looking at this chart, the trend downward since 2005 certainly struck us. 
 
 
 ```{r 'weekly-returns', echo=TRUE, message=FALSE, warning=FALSE}
-# Combine American Funds and Benchmark for Comparison
+# Combine AF and Benchmark for Comparison
 joined <- 
   data.table(
     date = index(portfolio_return),
@@ -300,7 +334,7 @@ joined <-
     diff = portfolio_return$portfolio.returns - benchmark_return$portfolio.returns
   )
 
-# Calculate weekly performance difference of American Funds vs benchmark
+# Calculate weekly performance difference of AF vs benchmark
 dt <-
   joined[, (diff.portfolio.returns > 0), 
          zoo::as.yearqtr(date)][
@@ -312,7 +346,7 @@ ggplot(dt, aes(quarter, comparison)) +
   geom_smooth() +
   theme_bw() +
   labs(
-    title = "Percent of Weeks Where American Funds Outperformed Vanguard Benchmark Portfolio by Quarter",
+    title = "Percent of Weeks Where AF Outperformed Vanguard Benchmark Portfolio by Quarter",
     y = "Percentage of Weeks Outperforming Benchmark",
     x = "Date"
     )
@@ -321,7 +355,7 @@ ggplot(dt, aes(quarter, comparison)) +
 
 # Modeling Fee Reductions in Line with Index Fund Benchmarks
 
-In 2005, the cost of many of the index funds we used in comparison exceeded 30 bps, and today the best in class index funds are at or below 10bps. We might have to study it more, but it seems like there was a bigger reduction in overseas and bond index funds than for the S&P, which was already low by 2010. Meanwhile, American Funds haven't lowered its expense ratios meaningfully in 20 years. That means that its managers would have to generate that much higher gross returns just to maintain the same active return. If we model in a 1 bp fee reduction per year, or 23 bps over the full period, the out-performance trajectory improves noticeably, though we are still not sure it is greater than 50%.
+In 2005, the cost of many of the index funds we used in comparison exceeded 30 bps, and today the best in class index funds are at or below 10bps. We might have to study it more, but it seems like there was a bigger reduction in overseas and bond index funds than for the S&P, which was already low by 2010. Meanwhile, AF haven't lowered its expense ratios meaningfully in 20 years. That means that its managers would have to generate that much higher gross returns just to maintain the same active return. If we model in a 1 bp fee reduction per year, or 23 bps over the full period, the out-performance trajectory improves noticeably, though we are still not sure it is greater than 50%.
 
 
 ```{r 'model-fee-reduction', echo=TRUE, message=FALSE, warning=FALSE}
@@ -333,7 +367,7 @@ joined[, year := year(date)]
 new_joined <- fee_reduction_db[joined, on = "year"][
   ][, .(date, adj_return = diff.portfolio.returns + fee_reduction/52)]
 
-# Calculate weekly performance difference of American Funds vs benchmark
+# Calculate weekly performance difference of AF vs benchmark
 dt <-
   new_joined[, (adj_return > 0), 
          zoo::as.yearqtr(date)][
@@ -345,7 +379,7 @@ ggplot(dt, aes(quarter, comparison)) +
   geom_smooth() +
   theme_bw() +
   labs(
-    title = "Percent of Weeks Where American Funds Outperformed Vanguard Benchmark Portfolio by Quarter",
+    title = "Percent of Weeks Where AF Outperformed Vanguard Benchmark Portfolio by Quarter",
     y = "Percentage of Weeks Outperforming Benchmark",
     x = "Date"
     )
@@ -355,7 +389,7 @@ ggplot(dt, aes(quarter, comparison)) +
 
 # Conclusion
 
-This has been a quick analysis to become accustomed to the `quantmod` and `PerformanceAnalytics` tools. We may return to this subject to look at relative performance during bear markets, and also to try to replicate the American Fund's Select Investment Scorecard, which measured longer periods of out-performance. Another future study we would like to do to more precisely quantify the change in relative fees. American Funds assets under management have risen from about \$1 trillion just before the GFC to \$1.8 trillion today, and this seems like a business with a high degree of operating leverage. Rather than spending a more money advertising, like many the other mediocre investment managers, as they have begun doing daily on CNBC and Morningstar, an investment in lower fees and renewed quiet out-performance might be the best medicine.
+This has been a quick analysis to become accustomed to the `quantmod` and `PerformanceAnalytics` tools. We may return to this subject to look at relative performance during bear markets, and also to try to replicate the American Fund's Select Investment Scorecard, which measured longer periods of out-performance. Another future study we would like to do to more precisely quantify the change in relative fees. AF assets under management have risen from about \$1 trillion just before the GFC to \$1.8 trillion today, and this seems like a business with a high degree of operating leverage. Rather than spending a more money advertising, like many the other mediocre investment managers, as they have begun doing daily on CNBC and Morningstar, an investment in lower fees and renewed quiet out-performance might be the best medicine.
 
 
 
